--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
-
+---
+titel: Leerkracht website
+---
 <!doctype html>
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Home</title>
+    <title>{{page.titel}} </title>
   </head>
   <body>
     <h1>Hello World!</h1>
