--- a/index.html
+++ b/index.html
@@ -1,14 +1,7 @@
 ---
+layout: default
 titel: Leerkracht website
 ---
-<!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>{{page.titel}} </title>
-  </head>
-  <body>
-    <h1>Hello World!</h1>
-    <p>Mijn eerste website !</p>
-  </body>
-</html>
+
+<h1>Hello World!</h1>
+<p>Mijn eerste website ! Nu door layout te gebruiken! </p>
